# spacesuit2

./: .gitignore  README.md
UI/: description.txt
UI/backend-scripts/: usage.txt
docs/: README.md  description.md  wifi.md
groundcontrol/backend/: .gitignore  .minio.default.env  Dockerfile  README.md  clean-docker.sh  docker-compose.yml  package.json
groundcontrol/backend/src/: db.ts  index.ts  resolvers.ts  schema.ts  vars.ts
groundcontrol/backend/src/auth/: tokens.ts
groundcontrol/backend/src/diagnostics/: type.ts
groundcontrol/backend/src/files/: mutations.ts  queries.ts  type.ts
groundcontrol/backend/src/missions/: mutations.ts  queries.ts  type.ts
groundcontrol/backend/src/notes/: mutations.ts  queries.ts  type.ts
groundcontrol/backend/src/suits/: mutations.ts  queries.ts  type.ts
groundcontrol/backend/src/tasks/: mutations.ts  queries.ts  type.ts
groundcontrol/backend/src/tools/: mutations.ts  queries.ts  type.ts
groundcontrol/backend/src/users/: mutations.ts  queries.ts  type.ts
groundcontrol/frontend/: README.md  nuxt.config.js  package.json  tsconfig.json
groundcontrol/frontend/assets/styles/: global.scss
groundcontrol/frontend/components/: Test.vue
groundcontrol/frontend/layouts/: default.vue
groundcontrol/frontend/pages/: about.vue  index.vue
groundcontrol/init/: README.md  package.json
groundcontrol/init/src/: db.ts  index.ts  mutations.ts  queries.ts  resolvers.ts  schema.ts  vars.ts
proposal/: .gitignore  README.md  excelgantt.xlsx  main.tex  makefile  references.bib
ros/: README.md
ros/cloud/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
ros/cloud/launch/: README.md  spacesuit_data_collector.launch  spacesuit_data_storage.launch
ros/cloud/params/: README.md
ros/cloud/params/data_collection/: spacesuit1.yaml
ros/cloud/scripts/: README.md  spacesuit_view_video
ros/cloud/src/: README.md
ros/cloud/src/spacesuit_data_collector/: config.py  core.py  data_collector.py  util.py
ros/cloud/src/spacesuit_data_storage/: __init__.py  config.py  core.py  data_storage.py
ros/common/: README.md
ros/embedded/: README.md
ros/embedded/buttons/: .gitignore  README.md  platformio.ini
ros/embedded/buttons/include/: config.h
ros/embedded/buttons/src/: main.cpp
ros/embedded/imu/: .gitignore  README.md  platformio.ini
ros/embedded/imu/src/: main.cpp
ros/embedded/imu_bno055/: .gitignore  cov.py  platformio.ini
ros/embedded/imu_bno055/include/: covariance.h  queue.h  sampleconfig.h
ros/embedded/imu_bno055/src/: covariance.cpp  main.cpp
ros/embedded/imu_lsm9ds1/: .gitignore  platformio.ini
ros/embedded/imu_lsm9ds1/include/: covariance.h
ros/embedded/imu_lsm9ds1/src/: main.cpp  ping.cpp
ros/embedded/lib/: cov.py
ros/embedded/radio/src/: main.cpp
ros/suit/: CMakeLists.txt  README.md  package.xml  setup.py
ros/suit/scripts/: README.md  spacesuit_start_video
ros/suit/src/: README.md
ui/Nasa  Suit/App/: Nasa  Suit.sln.metaproj  UnityCommon.props
ui/Nasa  Suit/App/AppPackages/Nasa  Suit/Nasa  Suit_1.0.0.0_x64_Test/: Add-AppDevPackage.ps1  Install.ps1  Nasa  Suit_1.0.0.0_x64.cer
ui/Nasa  Suit/App/Il2CppOutputProject/: Il2CppOutputProject.vcxproj  Il2CppOutputProject.vcxproj.filters
ui/Nasa  Suit/App/Il2CppOutputProject/Source/il2cppOutput/: Bulk_Generics_0.cpp  Bulk_Generics_1.cpp  Bulk_Generics_10.cpp  Bulk_Generics_11.cpp  Bulk_Generics_12.cpp  Bulk_Generics_13.cpp  Bulk_Generics_14.cpp  Bulk_Generics_15.cpp  Bulk_Generics_16.cpp  Bulk_Generics_17.cpp  Bulk_Generics_18.cpp  Bulk_Generics_19.cpp  Bulk_Generics_2.cpp  Bulk_Generics_20.cpp  Bulk_Generics_21.cpp  Bulk_Generics_22.cpp  Bulk_Generics_23.cpp  Bulk_Generics_24.cpp  Bulk_Generics_25.cpp  Bulk_Generics_26.cpp  Bulk_Generics_27.cpp  Bulk_Generics_28.cpp  Bulk_Generics_29.cpp  Bulk_Generics_3.cpp  Bulk_Generics_30.cpp  Bulk_Generics_31.cpp  Bulk_Generics_32.cpp  Bulk_Generics_33.cpp  Bulk_Generics_34.cpp  Bulk_Generics_35.cpp  Bulk_Generics_36.cpp  Bulk_Generics_37.cpp  Bulk_Generics_38.cpp  Bulk_Generics_39.cpp  Bulk_Generics_4.cpp  Bulk_Generics_40.cpp  Bulk_Generics_41.cpp  Bulk_Generics_42.cpp  Bulk_Generics_43.cpp  Bulk_Generics_44.cpp  (+219 more)
ui/Nasa  Suit/App/Nasa  Suit/: App.cpp  App.h  Main.cpp  Nasa  Suit.vcxproj  Nasa  Suit.vcxproj.filters  Nasa  Suit.vcxproj.metaproj  Package.appxmanifest  Unity Data.vcxitems  Unity Data.vcxitems.filters
ui/Nasa  Suit/App/Nasa  Suit/Managed/: Windows.Foundation.FoundationContract.winmd  Windows.Foundation.UniversalApiContract.winmd  Windows.winmd
ui/Nasa  Suit/Assets/: WSATestCertificate.pfx
ui/Nasa  Suit/Assets/MixedRealityToolkit.Providers/WindowsMixedReality/Shared/DotNetAdapter/.obj/: DotNetAdapter.csproj.nuget.cache  DotNetAdapter.csproj.nuget.dgspec.json  DotNetAdapter.csproj.nuget.g.props  DotNetAdapter.csproj.nuget.g.targets  project.assets.json
ui/Nasa  Suit/Assets/MixedRealityToolkit.Providers/WindowsMixedReality/Shared/DotNetAdapter/.obj/Release/net46/: DotNetAdapter.assets.cache  DotNetAdapter.csproj.FileListAbsolute.txt  DotNetAdapter.csprojAssemblyReference.cache
