<?xml version="1.0"?>
<package>
  <name>space_suit_cloud</name>
  <version>0.0.1</version>
  <description>
    Space Suit ros cloud
  </description>
  <author email="jschmidtnj@gmail.com">Joshua Schmidt</author>
  <maintainer email="jschmidtnj@gmail.com">Joshua Schmidt</maintainer>
  <license>MIT</license>
  <url type="bugtracker">https://github.com/jschmidtnj/spacesuit2/issues</url>
  <url type="repository">https://github.com/jschmidtnj/spacesuit2</url>
  <url type="website">https://jschmidtnj.github.io/spacesuit2</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
