################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(space_suit)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
  sensor_msgs
  actionlib_msgs
  geometry_msgs
)

# Run catkin Python setup
catkin_python_setup()
################################################################################
# Declare ROS messages, services and actions
################################################################################

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  CATKIN_DEPENDS rospy std_msgs geometry_msgs geometry_msgs sensor_msgs actionlib_msgs
)

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################
# TODO
################################################################################
# Test
################################################################################
