################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(spacesuit)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  sensor_msgs
  geometry_msgs
)
find_package(PkgConfig)
# Run catkin Python setup
catkin_python_setup()
################################################################################
# Declare ROS messages, services and actions
################################################################################

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs geometry_msgs sensor_msgs
)

add_compile_options(-std=c++11)
include_directories(include ${catkin_INCLUDE_DIRS})

# target_link_libraries(${catkin_LIBRARIES})
add_dependencies(${catkin_EXPORTED_TARGETS})

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################
# TODO
################################################################################
# Test
################################################################################
